AIML correction and Creation Dynamically

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
             </div>
             <div class="user-input">
                 <input type="text" id='query' placeholder="Type your message and press enter ">
-                <button id='button'><i class="fa fa-paper-plane" aria-hidden="true" style="color:#17c1d9;font-size: 23px;margin-left: 5px;vertical-align: middle;"></i></button>
+                <button id='button' class="scroll"><i class="fa fa-paper-plane" aria-hidden="true" style="color:#17c1d9;font-size: 23px;margin-left: 5px;vertical-align: middle;"></i></button>
             </div>
         </div>
     </section>
