--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,150 +1,157 @@
-.chat-box .chat-boximg {
-  cursor: pointer;
-  position: fixed;
-  right: 30px;
-  bottom: 10px;
-  z-index: 999;
-  border-radius: 50%;
-  box-shadow: -6.82px -7.314px 20.58px 0.42px rgba(47, 181, 215, 0.43);
-  -webkit-box-shadow: -6.82px -7.314px 20.58px 0.42px rgba(47, 181, 215, 0.43);
-  -moz-box-shadow: -6.82px -7.314px 20.58px 0.42px rgba(47, 181, 215, 0.43);
+.c1Btrr36pdthb9xbhcppyqkgbpkq .quest{
+  text-transform: capitalize;
 }
-.chat-box .chatbot-holder {
-  display: none;
-  position: fixed;
-  right: 7%;
-  bottom: 40px;
-  min-height: 300px;
-  width: 350px;
-  border-radius: 5px;
-  background: #fff;
-  z-index: 111;
-  box-shadow: -14.724px -2.862px 20.58px 0.42px rgba(58, 58, 58, 0.09);
-  -webkit-box-shadow: -14.724px -2.862px 20.58px 0.42px rgba(58, 58, 58, 0.09);
-  -moz-box-shadow: -14.724px -2.862px 20.58px 0.42px rgba(58, 58, 58, 0.09);
+.c1Btrr36pdthb9xbhcppyqkgbpkq .chat-box {
+    line-height: 1.42857143 !important;
 }
-.chat-box .chatbot-holder .chatbox-content {
-  overflow-y: scroll;
-  height: 221px;
-  padding: 15px;
+.c1Btrr36pdthb9xbhcppyqkgbpkq .chat-box .chat-boximg {
+  cursor: pointer !important;
+  position: fixed !important;
+  right: 30px !important;
+  bottom: 10px !important;
+  z-index: 999 !important;
+  border-radius: 50% !important;
+  box-shadow: -6.82px -7.314px 20.58px 0.42px rgba(47, 181, 215, 0.43) !important;
+  -webkit-box-shadow: -6.82px -7.314px 20.58px 0.42px rgba(47, 181, 215, 0.43) !important;
+  -moz-box-shadow: -6.82px -7.314px 20.58px 0.42px rgba(47, 181, 215, 0.43) !important;
 }
-.chat-box .chatbot-holder .chatbox-content .quest {
-  text-align: right;
+.c1Btrr36pdthb9xbhcppyqkgbpkq .chat-box .chatbot-holder {
+  /*display: none;*/
+  position: fixed !important;
+  right: 7% !important;
+  bottom: 40px !important;
+  min-height: 300px !important;
+  width: 350px !important;
+  border-radius: 5px !important;
+  background: #fff !important;
+  z-index: 111 !important;
+  box-shadow: -14.724px -2.862px 20.58px 0.42px rgba(58, 58, 58, 0.09) !important;
+  -webkit-box-shadow: -14.724px -2.862px 20.58px 0.42px rgba(58, 58, 58, 0.09) !important;
+  -moz-box-shadow: -14.724px -2.862px 20.58px 0.42px rgba(58, 58, 58, 0.09) !important;
 }
-.chat-box .chatbot-holder .chatbox-content .quest .quescontent {
+.c1Btrr36pdthb9xbhcppyqkgbpkq .chat-box .chatbot-holder .chatbox-content {
+  overflow-y: scroll !important;
+  height: 221px !important;
+  padding: 15px !important;
+}
+.c1Btrr36pdthb9xbhcppyqkgbpkq .chat-box .chatbot-holder .chatbox-content .quest {
+  text-align: right !important;
+}
+.c1Btrr36pdthb9xbhcppyqkgbpkq .chat-box .chatbot-holder .chatbox-content .quest .quescontent {
+  display: inline-block !important;
+  height: auto !important;
+  border: 1px solid #ecfdff !important;
+  padding: 10px !important;
+  position: relative !important;
+  background: #ecfdff !important;
+  margin-right: 7px !important;
+  vertical-align: top !important;
+  margin-bottom: 15px !important;
+  max-width: 230px !important;
+}
+.c1Btrr36pdthb9xbhcppyqkgbpkq .chat-box .chatbot-holder .chatbox-content .quest .quescontent a {
+  display: block !important;
+  margin-bottom: 5px !important;
+}
+.c1Btrr36pdthb9xbhcppyqkgbpkq .chat-box .chatbot-holder .chatbox-content .quest .quescontent p {
+  margin-bottom: 5px !important;
+      font-weight: 400;
+}
+.c1Btrr36pdthb9xbhcppyqkgbpkq .chat-box .chatbot-holder .chatbox-content .quest img {
+  max-width: 32px !important;
+  width: 100% !important;
+}
+.c1Btrr36pdthb9xbhcppyqkgbpkq .chat-box .chatbot-holder .chatbox-content .answer .anscontent {
+  display: inline-block !important;
+  height: auto !important;
+  position: relative !important;
+  padding: 10px !important;
+  margin-left: 7px !important;
+  background: rgba(72, 86, 111, 0.08) !important;
+  vertical-align: top !important;
+  margin-bottom: 15px !important;
+  max-width: 230px !important;
+      font-weight: 400;
+}
+.c1Btrr36pdthb9xbhcppyqkgbpkq .chat-box .chatbot-holder .chatbox-content .answer .anscontent a {
+  display: block !important;
+  margin-bottom: 5px !important;
+}
+.c1Btrr36pdthb9xbhcppyqkgbpkq .chat-box .chatbot-holder .chatbox-content .answer .anscontent p {
+  margin-bottom: 5px !important;
+}
+.c1Btrr36pdthb9xbhcppyqkgbpkq .chat-box .chatbot-holder .chatbox-content .answer img {
+  max-width: 32px !important;
+  width: 100% !important;
+}
+.c1Btrr36pdthb9xbhcppyqkgbpkq .chat-box .chatbot-holder .user-input {
+  padding: 20px !important;
+  background: #e0ebec !important;
+  width: 100% !important;
+  left: 0 !important;
+  border-bottom-left-radius: 5px !important;
+  border-bottom-right-radius: 5px !important;
+}
+.c1Btrr36pdthb9xbhcppyqkgbpkq .chat-box .chatbot-holder .user-input input {
+  width: 85% !important;
+  padding: 10px !important;
+  border: none !important;
   display: inline-block;
-  height: auto;
-  border: 1px solid #ecfdff;
-  padding: 10px;
-  position: relative;
-  background: #ecfdff;
-  margin-right: 7px;
-  vertical-align: top;
-  margin-bottom: 15px;
-  max-width: 230px;
+    vertical-align: middle;
 }
-.chat-box .chatbot-holder .chatbox-content .quest .quescontent a {
-  display: block;
-  margin-bottom: 5px;
+.c1Btrr36pdthb9xbhcppyqkgbpkq .chat-box .chatbot-holder .user-input input:focus {
+  outline: none !important;
+  border: none !important;
 }
-.chat-box .chatbot-holder .chatbox-content .quest .quescontent p {
-  margin-bottom: 5px;
+.c1Btrr36pdthb9xbhcppyqkgbpkq .chat-box .chatbot-holder .user-input button {
+  border: none !important;
+  background: #e0ebec !important;
 }
-.chat-box .chatbot-holder .chatbox-content .quest img {
-  max-width: 32px;
-  width: 100%;
+.c1Btrr36pdthb9xbhcppyqkgbpkq .chat-box .chatbot-holder .user-input button:focus {
+  outline: none !important;
+  border: none !important;
 }
-.chat-box .chatbot-holder .chatbox-content .answer .anscontent {
-  display: inline-block;
-  height: auto;
-  position: relative;
-  padding: 10px;
-  margin-left: 7px;
-  background: rgba(72, 86, 111, 0.08);
-  vertical-align: top;
-  margin-bottom: 15px;
-  max-width: 230px;
+.c1Btrr36pdthb9xbhcppyqkgbpkq .quescontent:after, .c1Btrr36pdthb9xbhcppyqkgbpkq .quescontent:before {
+  right: -22px !important;
+  top: 15px !important;
+  border: solid transparent !important;
+  content: " " !important;
+  height: 0 !important;
+  width: 0 !important;
+  position: absolute !important;
+  pointer-events: none !important;
 }
-.chat-box .chatbot-holder .chatbox-content .answer .anscontent a {
-  display: block;
-  margin-bottom: 5px;
+.c1Btrr36pdthb9xbhcppyqkgbpkq .quescontent:after {
+  border-left-color: #ecfdff !important;
+  border-width: 11px !important;
+  margin-top: -11px !important;
 }
-.chat-box .chatbot-holder .chatbox-content .answer .anscontent p {
-  margin-bottom: 5px;
+.c1Btrr36pdthb9xbhcppyqkgbpkq .anscontent:after, .c1Btrr36pdthb9xbhcppyqkgbpkq .anscontent:before {
+  left: -22px !important;
+  top: 17px !important;
+  border: solid transparent !important;
+  content: " " !important;
+  height: 0 !important;
+  width: 0 !important;
+  position: absolute !important;
+  pointer-events: none !important;
 }
-.chat-box .chatbot-holder .chatbox-content .answer img {
-  max-width: 32px;
-  width: 100%;
+.c1Btrr36pdthb9xbhcppyqkgbpkq .anscontent:after {
+  border-right-color: rgba(72, 86, 111, 0.08) !important;
+  border-width: 11px !important;
+  margin-top: -11px !important;
 }
-.chat-box .chatbot-holder .user-input {
-  padding: 20px;
-  background: #e0ebec;
-  width: 100%;
-  left: 0;
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
+.c1Btrr36pdthb9xbhcppyqkgbpkq #result::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3) !important;
+  border-radius: 4px !important;
+  background-color: #f5f5f5 !important;
 }
-.chat-box .chatbot-holder .user-input input {
-  width: 85%;
-  padding: 10px;
-  border: none;
+.c1Btrr36pdthb9xbhcppyqkgbpkq #result::-webkit-scrollbar {
+  width: 4px !important;
+  background-color: #f5f5f5 !important;
 }
-.chat-box .chatbot-holder .user-input input:focus {
-  outline: none;
-  border: none;
-}
-.chat-box .chatbot-holder .user-input button {
-  border: none;
-  background: #e0ebec;
-}
-.chat-box .chatbot-holder .user-input button:focus {
-  outline: none;
-  border: none;
-}
-.quescontent:after, .quescontent:before {
-  right: -22px;
-  top: 15px;
-  border: solid transparent;
-  content: " ";
-  height: 0;
-  width: 0;
-  position: absolute;
-  pointer-events: none;
-}
-.quescontent:after {
-  border-left-color: #ecfdff;
-  border-width: 11px;
-  margin-top: -11px;
-}
-.anscontent:after, .anscontent:before {
-  left: -22px;
-  top: 17px;
-  border: solid transparent;
-  content: " ";
-  height: 0;
-  width: 0;
-  position: absolute;
-  pointer-events: none;
-}
-.anscontent:after {
-  border-right-color: rgba(72, 86, 111, 0.08);
-  border-width: 11px;
-  margin-top: -11px;
-}
-#result::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  border-radius: 4px;
-  background-color: #f5f5f5;
-}
-#result::-webkit-scrollbar {
-  width: 4px;
-  background-color: #f5f5f5;
-}
-#result::-webkit-scrollbar-thumb {
-  border-radius: 4px;
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
-  background-color: #17c1d9;
-}
-.hidden-span {
-  display: none;
+.c1Btrr36pdthb9xbhcppyqkgbpkq #result::-webkit-scrollbar-thumb {
+  border-radius: 4px !important;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3) !important;
+  background-color: #17c1d9 !important;
 }
