CROSs Origin, Live Server Ip, Structure AIML

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,14 @@
 <html>
 <head>
-    <link href="../static/css/main.css" rel="stylesheet">
-    <link href="../static/css/bootstrap/bootstrap.min.css" rel="stylesheet">
+    <link href="https://chatbot.wow.jobs/static/css/main.css" rel="stylesheet">
+    <link href="https://chatbot.wow.jobs/static/css/bootstrap/bootstrap.min.css" rel="stylesheet">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 <section class="c1Btrr36pdthb9xbhcppyqkgbpkq">
     <section class="chat-box">
         <div class="chatbox-logo">
-           <img src="../static/images/chat/chat-box.png" class="chat-boximg">
+           <img src="https://chatbot.wow.jobs/static/images/chat/chat-box.png" class="chat-boximg">
         </div>
         <div class="chatbot-holder">
             <div class="chatbox-content" id="result">
@@ -21,8 +21,8 @@
     </section>
     </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="../static/js/jquery.cookie.js"></script>
-    <script src="../static/js/ajax_response.js"></script>
+    <script src="https://chatbot.wow.jobs/static/js/jquery.cookie.js"></script>
+    <script src="https://chatbot.wow.jobs/static/js/ajax_response.js"></script>
 </body>
 </html>
 
@@ -30,5 +30,5 @@
 {#    <section class="chat-empwidget"><div class="chat-widget-holder"><div id="chat-widget"></div></div></section>#}
 {#<script>#}
 {#    #}
-{#$.ajax({type: 'GET',url: 'http://127.0.0.1:5000/', data: {'c':'Appiness%20%C2%A0Interactive%20Pvt.%20Ltd.' },async: false,success: function(response) {$(document).find('#chat-widget').html(response);}});#}
+{#$.ajax({type: 'GET',url: 'https://chatbot.wow.jobs/', data: {'c':'Appiness%20%C2%A0Interactive%20Pvt.%20Ltd.' },async: false,success: function(response) {$(document).find('#chat-widget').html(response);}});#}
 {#</script>#}
