--- a/templates/index1.html
+++ b/templates/index1.html
@@ -4292,7 +4292,7 @@ ________________________________________________________________________________
     <section class="chat-empwidget"><div class="chat-widget-holder"><div id="chat-widget"></div></div></section>
 <script>
     document.cookie = "c_wow_name=" + 'APPINESS  INTERACTIVE PVT LTD; expires=1609415999; path=/';
-$.ajax({type: 'GET',url: 'http://127.0.0.1:5000/',async: false,success: function(response) {$(document).find('#chat-widget').html(response);}});
+$.ajax({type: 'GET',url: 'https://chatbot.wow.jobs/',async: false,success: function(response) {$(document).find('#chat-widget').html(response);}});
 </script>
 </body>
 
