--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,14 @@
 <html>
-<<<<<<< HEAD
     <head>
-        <link href="http://127.0.0.1:5001//static/css/main.css" rel="stylesheet">
-        <link href="http://127.0.0.1:5001//static/css/bootstrap/bootstrap.min.css" rel="stylesheet">
+        <link href="http://127.0.0.1:5000/static/css/main.css" rel="stylesheet">
+        <link href="http://127.0.0.1:5000/static/css/bootstrap/bootstrap.min.css" rel="stylesheet">
          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <section class="c1Btrr36pdthb9xbhcppyqkgbpkq">
             <section class="chat-box">
                 <div class="chatbox-logo">
-                   <img src="http://127.0.0.1:5001//static/images/chat/chat-box.png" class="chat-boximg">
+                   <img src="http://127.0.0.1:5000/static/images/chat/chat-box.png" class="chat-boximg">
                 </div>
                 <div class="chatbot-holder">
                     <div class="chatbox-content" id="result">
@@ -30,7 +29,7 @@
         </div>
         <div class="custom-input">
             <input type="text" placeholder="Your input here...">
-            <img src="http://127.0.0.1:5001//static/images/chat/save.png" alt="image">
+            <img src="http://127.0.0.1:5000/static/images/chat/save.png" alt="image">
         </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="http://chatbot.wow.jobs:5000/static/js/jquery.cookie.js"></script>
