--- a/templates/botnew.html
+++ b/templates/botnew.html
@@ -4,29 +4,25 @@
     <meta name="theme-color" content="#0086bf" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <title>ChatBot</title>
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <link rel="stylesheet" href="http://chatbot.wow.jobs:5000/static/owl/dist/assets/owl.carousel.css">
     <link rel="stylesheet" href="http://chatbot.wow.jobs:5000/static/owl/dist/assets/owl.theme.default.min.css">
     <link rel="stylesheet" href="http://chatbot.wow.jobs:5000/static/css/style.css">
     <!-- Latest compiled and minified JavaScript -->
 </head>
 <body>
-    <div class="bot-holder">
-        <div class="headIng">Chatbot <span class="minmizeIt">-</span></div>
-        <div class="bot-content" id="result">
-        </div>
-        <div class="custom-input">
-            <input type="text" id='query' onkeypress="handle(event)" placeholder="Your input here...">
-            <button id='button' class="scroll"><img src="http://chatbot.wow.jobs:5000/static/images/chat/save.png" alt="image"></button>
+    <div class="bootstrap-hold">
+        <div class="bot-holder">
+            <div class="headIng">Chatbot <span class="minmizeIt">-</span></div>
+            <div class="bot-content" id="result">
+            </div>
+            <div class="custom-input">
+                <input type="text" id='query' onkeypress="handle(event)" placeholder="Your input here...">
+                <button id='button' class="scroll"><img src="http://chatbot.wow.jobs:5000/static/images/chat/save.png" alt="image"></button>
+            </div>
         </div>
     </div>
-    <!--<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="http://chatbot.wow.jobs:5000/static/js/jquery_cookie.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="http://chatbot.wow.jobs:5000/static/js/ajax_response.js"></script>
     <script src="http://chatbot.wow.jobs:5000/static/owl/dist/owl.carousel.min.js"></script>
 </body>
