UI Integration Changes and the Live Link Cahnges

--- a/templates/botnew.html
+++ b/templates/botnew.html
@@ -6,7 +6,7 @@
     <title>ChatBot</title>
     <link rel="stylesheet" href="http://chatbot.wow.jobs:5000/static/owl/dist/assets/owl.carousel.css">
     <link rel="stylesheet" href="http://chatbot.wow.jobs:5000/static/owl/dist/assets/owl.theme.default.min.css">
-    <link rel="stylesheet" href="http://chatbot.wow.jobs:5000/static/css/style.css">
+    <link rel="stylesheet" href="http://chatbot.wow.jobs/static/css/style.css">
     <!-- Latest compiled and minified JavaScript -->
 </head>
 <body>
@@ -23,8 +23,8 @@
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyAFVHZ3Ocumy7N6ToR-zHlY47rrdweqvug&sensor=false"></script>
-    <script src="http://chatbot.wow.jobs:5000/static/js/jquery_cookie.js"></script>
-    <script src="http://chatbot.wow.jobs:5000/static/js/ajax_response.js"></script>
+    <script src="http://chatbot.wow.jobs/static/js/jquery_cookie.js"></script>
+    <script src="http://chatbot.wow.jobs/static/js/ajax_response.js"></script>
     <script src="http://chatbot.wow.jobs:5000/static/owl/dist/owl.carousel.min.js"></script>
 </body>
 <script>
