--- a/templates/botnew.html
+++ b/templates/botnew.html
@@ -5,8 +5,8 @@
     <meta name="theme-color" content="#0086bf" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <title>ChatBot</title>
-    <link rel="stylesheet" href="http://chatbot.wow.jobs:5000/static/owl/dist/assets/owl.carousel.css">
-    <link rel="stylesheet" href="http://chatbot.wow.jobs:5000/static/owl/dist/assets/owl.theme.default.min.css">
+    <link rel="stylesheet" href="http://chatbot.wow.jobs/static/owl/dist/assets/owl.carousel.css">
+    <link rel="stylesheet" href="http://chatbot.wow.jobs/static/owl/dist/assets/owl.theme.default.min.css">
     <link rel="stylesheet" href="http://chatbot.wow.jobs/static/css/style.css">
     <!-- Latest compiled and minified JavaScript -->
 </head>
@@ -19,7 +19,7 @@
             </div>
             <div class="custom-input">
                 <input type="text" id='query' onkeypress="handle(event)" placeholder="Your input here...">
-                <button id='button' class="scroll"><img src="http://chatbot.wow.jobs:5000/static/images/chat/save.png" alt="image"></button>
+                <button id='button' class="scroll"><img src="http://chatbot.wow.jobs/static/images/chat/save.png" alt="image"></button>
             </div>
         </div>
     </div>
@@ -27,7 +27,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyAFVHZ3Ocumy7N6ToR-zHlY47rrdweqvug&sensor=false"></script>
     <script src="http://chatbot.wow.jobs/static/js/jquery_cookie.js"></script>
     <script src="http://chatbot.wow.jobs/static/js/ajax_response.js"></script>
-    <script src="http://chatbot.wow.jobs:5000/static/owl/dist/owl.carousel.min.js"></script>
+    <script src="http://chatbot.wow.jobs/static/owl/dist/owl.carousel.min.js"></script>
 </body>
 <script>
     $('.minmizeIt').click(function() {
