--- a/templates/botnew.html
+++ b/templates/botnew.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="theme-color" content="#0086bf" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-    <title>ChatBot</title>
+    <title>Chatbot</title>
     <link rel="stylesheet" href="http://chatbot.wow.jobs/static/owl/dist/assets/owl.carousel.css">
     <link rel="stylesheet" href="http://chatbot.wow.jobs/static/owl/dist/assets/owl.theme.default.min.css">
     <link rel="stylesheet" href="http://chatbot.wow.jobs/static/css/style.css">
@@ -14,7 +14,7 @@
 <body>
     <div class="bootstrap-hold">
         <div class="bot-holder">
-            <div class="headIng">Chatbot <span class="minmizeIt">-</span></div>
+            <div class="headIng"> Hi from Wowee<span class="minmizeIt">-</span></div>
             <div class="bot-content" id="result">
             </div>
             <div class="custom-input">
@@ -25,8 +25,8 @@
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyAFVHZ3Ocumy7N6ToR-zHlY47rrdweqvug&sensor=false"></script>
-    <script src="http://chatbot.wow.jobs/static/js/jquery_cookie.js"></script>
-    <script src="http://chatbot.wow.jobs/static/js/ajax_response.js"></script>
+    <script src="http://chatbot.wow.jobs.dev/static/js/jquery_cookie.js"></script>
+    <script src="http://chatbot.wow.jobs.dev/static/js/ajax_response.js"></script>
     <script src="http://chatbot.wow.jobs/static/owl/dist/owl.carousel.min.js"></script>
 </body>
 <script>
