--- a/templates/botnew.html
+++ b/templates/botnew.html
@@ -25,8 +25,8 @@
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyAFVHZ3Ocumy7N6ToR-zHlY47rrdweqvug&sensor=false"></script>
-    <script src="http://chatbot.wow.jobs.dev/static/js/jquery_cookie.js"></script>
-    <script src="http://chatbot.wow.jobs.dev/static/js/ajax_response.js"></script>
+    <script src="http://chatbot.wow.jobs/static/js/jquery_cookie.js"></script>
+    <script src="http://chatbot.wow.jobs/static/js/ajax_response.js"></script>
     <script src="http://chatbot.wow.jobs/static/owl/dist/owl.carousel.min.js"></script>
 </body>
 <script>
